<resources>
    <string name="app_name">BlanatFront</string>
    <string name="acceuil">Explore, discover amazing deals, and save your money with our app!</string>
    <string name="login">Log In</string>
    <string name="signup">Sign Up</string>
    <string name="create_account">Don\'t have an account? Sign up.</string>
    <string name="u_have_account_login">You already have an account? Log In.</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="password_verification_hint">Password Verification</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="logout">Logout</string>
</resources>